<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThankYouActivity"
    android:background="#fff">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="133dp"
        android:layout_height="127dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="232dp"
        android:contentDescription="@string/namaste"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/thank" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="241dp"
        android:layout_height="118dp"
        android:layout_marginTop="232dp"
        android:contentDescription="@string/thankYou"
        android:src="@drawable/thanksupport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/thanksupport" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:textSize="15dp"
        android:gravity="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/text"
        android:text="@string/message"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>