<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedbackActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/suggestion"
        android:inputType="text"
        android:id="@+id/suggestion"
        android:textColor="#000"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/optional"
        android:id="@+id/details"
        android:inputType="text"
        android:textColor="#000"
        android:layout_below="@id/suggestion"
        />

    <Button
        android:id="@+id/angry_btn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/details"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="128dp"
        android:layout_marginTop="202dp"
        android:layout_marginEnd="128dp"
        android:background="@drawable/buttonshape"
        android:gravity="center"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

</RelativeLayout>